--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "json-bigint": "^0.3.0",
     "postcss-pxtorem": "^4.0.1",
     "vant": "^2.2.7",
+    "vee-validate": "^3.0.11",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
